# sem

./: CHANGELOG.md  README.md  demo_arch.sh  demo_record.sh  install.sh
.claude/: settings.json
.claude/hooks/: sem-first.sh
.github/workflows/: release.yml
agent-skill/: README.md  SKILL.md  install.mjs  package.json
crates/: Cargo.toml
crates/sem-cli/: Cargo.toml
crates/sem-cli/src/: cache.rs  main.rs  progress.rs
crates/sem-cli/src/commands/: cloud.rs  context.rs  diff.rs  entities.rs  files.rs  graph.rs  impact.rs  log.rs  mod.rs  setup.rs  update.rs  verify.rs
crates/sem-cli/src/formatters/: markdown.rs  plain.rs  terminal.rs
crates/sem-cli/tests/: cwd_resolution.rs  setup_regressions.rs
crates/sem-cloud-client/: Cargo.toml
crates/sem-cloud-client/src/: lib.rs
crates/sem-core/: Cargo.toml
crates/sem-core/src/git/: bridge.rs
crates/sem-core/src/model/: change.rs  entity.rs  identity.rs
crates/sem-core/src/parser/: context.rs  differ.rs  graph.rs  import_resolution.rs  mod.rs  orient.rs  registry.rs  scope_resolve.rs
crates/sem-core/src/parser/plugins/: csv_plugin.rs  erb.rs  fallback.rs  json.rs  latex.rs  markdown.rs  svelte.rs  toml_plugin.rs  vue.rs  yaml.rs
crates/sem-core/src/parser/plugins/code/: entity_extractor.rs  languages.rs  mod.rs
crates/sem-core/src/utils/: mod.rs  scan.rs
crates/sem-core/tests/: elm_smoke.rs  scope_resolve_bench.rs
crates/sem-core/tests/fixtures/scope_test/swift/: database.swift
crates/sem-mcp/: Cargo.toml
crates/sem-mcp/src/: cache.rs  cloud.rs  lib.rs  server.rs  tools.rs  transport.rs
crates/sem-plugin/: Cargo.toml
crates/sem-plugin/schema/: sem_entity.json
crates/sem-plugin/src/: bindings.rs  lib.rs
crates/sem-plugin/test-harness/: Cargo.toml
docs/: llms.txt
scripts/: package-meta.mjs  package-meta.test.mjs  postinstall.mjs
skills/sem/: SKILL.md
