[workspace]
members = ["sem-core", "sem-cli", "sem-mcp", "sem-plugin", "sem-cloud-client"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Size-optimized profile for WASM builds
[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = "fat"
strip = "symbols"
