[package]
name = "sem-cloud-client"
version = "0.14.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared client for sem-cloud: credentials, repo resolution, caching, and the metered graph API. Used by both the sem CLI and the sem MCP server."
repository = "https://github.com/Ataraxy-Labs/sem"
homepage = "https://github.com/Ataraxy-Labs/sem"
keywords = ["sem", "cloud", "client", "code-intelligence"]
categories = ["development-tools"]
readme = "../../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
