[package]
name = "sem-core"
version = "0.14.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Entity-level semantic diff engine. Extracts functions, classes, and methods from 28 languages via tree-sitter and diffs at the entity level."
repository = "https://github.com/Ataraxy-Labs/sem"
homepage = "https://github.com/Ataraxy-Labs/sem"
keywords = ["diff", "semantic", "tree-sitter", "ast", "code-analysis"]
categories = ["development-tools", "parser-implementations"]
readme = "../../README.md"

[features]
default = ["git", "parallel", "grammar-all"]
git = ["dep:git2"]
parallel = ["dep:rayon"]
wasm = []

# Grammar groups
grammar-core = [
    "lang-typescript", "lang-javascript", "lang-python",
    "lang-go", "lang-rust", "lang-java",
]
grammar-all = [
    "grammar-core",
    "lang-c", "lang-cpp", "lang-ruby", "lang-csharp", "lang-php",
    "lang-fortran", "lang-swift", "lang-elixir", "lang-bash", "lang-hcl",
    "lang-kotlin", "lang-xml", "lang-dart", "lang-perl", "lang-ocaml",
    "lang-scala", "lang-zig", "lang-nix",
    "lang-svelte", "lang-erb",
    "lang-haskell",
    "lang-elm",
    "lang-clojure",
    "lang-edn",
    "lang-d",
    "lang-sql",
    "lang-lua",
]

# Individual grammar features
lang-typescript = ["dep:tree-sitter-typescript"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-python = ["dep:tree-sitter-python"]
lang-go = ["dep:tree-sitter-go"]
lang-rust = ["dep:tree-sitter-rust"]
lang-java = ["dep:tree-sitter-java"]
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-php = ["dep:tree-sitter-php"]
lang-fortran = ["dep:tree-sitter-fortran"]
lang-swift = ["dep:tree-sitter-swift"]
lang-elixir = ["dep:tree-sitter-elixir"]
lang-bash = ["dep:tree-sitter-bash"]
lang-hcl = ["dep:tree-sitter-hcl"]
lang-kotlin = ["dep:tree-sitter-kotlin-ng"]
lang-xml = ["dep:tree-sitter-xml"]
lang-dart = ["dep:tree-sitter-dart"]
lang-perl = ["dep:ts-parser-perl"]
lang-ocaml = ["dep:tree-sitter-ocaml"]
lang-scala = ["dep:tree-sitter-scala"]
lang-zig = ["dep:tree-sitter-zig"]
lang-nix = ["dep:tree-sitter-nix"]
lang-svelte = ["dep:tree-sitter-htmlx-svelte"]
lang-erb = ["dep:tree-sitter-embedded-template"]
lang-haskell = ["dep:tree-sitter-haskell"]
lang-elm = ["dep:tree-sitter-elm"]
lang-clojure = ["dep:tree-sitter-clojure-orchard"]
lang-edn = ["dep:tree-sitter-clojure-orchard"]
lang-d = ["dep:tree-sitter-d"]
lang-sql = ["dep:tree-sitter-sequel"]
lang-lua = ["dep:tree-sitter-lua"]

[dependencies]
git2 = { version = "0.20", optional = true }
tree-sitter = "0.26"
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-c-sharp = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.23", optional = true }
tree-sitter-fortran = { version = "0.5", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }
tree-sitter-elixir = { version = "0.3", optional = true }
tree-sitter-bash = { version = "0.23", optional = true }
tree-sitter-hcl = { version = "1.1", optional = true }
tree-sitter-kotlin-ng = { version = "1.1", optional = true }
tree-sitter-xml = { version = "0.7", optional = true }
tree-sitter-embedded-template = { version = "0.25", optional = true }
tree-sitter-ocaml = { version = "0.24", optional = true }
tree-sitter-htmlx-svelte = { version = "0.1.7", optional = true }
tree-sitter-dart = { version = "0.2.0", optional = true }
# Official, actively-maintained Perl grammar (the -next crate was an
# unattributed copy; this is a drop-in replacement, strictly newer). See #355.
ts-parser-perl = { version = "1.1", optional = true }
tree-sitter-scala = { version = "0.26", optional = true }
# DerekStride/tree-sitter-sql, published as tree-sitter-sequel. See #339.
tree-sitter-sequel = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
regex = "1"
thiserror = "2"
rayon = { version = "1.10", optional = true }
tree-sitter-zig = { version = "1.1.2", optional = true }
tree-sitter-nix = { version = "0.3", optional = true }
tree-sitter-haskell = { version = "0.23", optional = true }
tree-sitter-elm = { version = "5.9", optional = true }
tree-sitter-clojure-orchard = { version = "0.2.5", optional = true }
tree-sitter-d = { version = "0.8.2", optional = true }
tree-sitter-lua = { version = "0.5.0", optional = true }
rustc-hash = "2"

[dev-dependencies]
tempfile = "3.24.0"
