[package]
name = "sem-mcp"
version = "0.14.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MCP server for entity-level semantic code intelligence. 6 tools: sem_entities, sem_diff, sem_blame, sem_impact, sem_log, sem_context."
repository = "https://github.com/Ataraxy-Labs/sem"
homepage = "https://github.com/Ataraxy-Labs/sem"
keywords = ["mcp", "semantic", "agent", "code-analysis", "impact"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "sem-mcp"
path = "src/main.rs"

[dependencies]
sem-core = { path = "../sem-core", version = "0.14.1" }
sem-cloud-client = { path = "../sem-cloud-client", version = "0.14.1" }
git2 = "0.20"
lru = "0.16"
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
ignore = "0.4"
notify = "8"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }
mimalloc = "0.1"

[dev-dependencies]
tempfile = "3.24.0"

[features]
default = []
vendored-openssl = ["openssl"]
