[package]
name = "sem-plugin"
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASI component plugin for semantic entity-level change detection"
repository = "https://github.com/Ataraxy-Labs/sem"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
sem-core = { path = "../sem-core", default-features = false, features = ["wasm", "grammar-all"] }
wit-bindgen = "0.40"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
sem-core = { path = "../sem-core", default-features = false, features = ["wasm", "grammar-all"] }
wit-bindgen = "0.40"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "lix:plugin"
