[package]
name = "sem-plugin-test"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
lix_rs_sdk = { git = "https://github.com/opral/lix", branch = "plugin-api", package = "lix_rs_sdk" }
lix_engine = { git = "https://github.com/opral/lix", branch = "plugin-api", package = "lix_engine" }
wasmtime = { version = "36", features = ["component-model"] }
wasmtime-wasi = "30"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
zip = { version = "2", default-features = false }
